<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".activities.TawafActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/cairo_light"
            android:text="@string/number_achwat_string"
            android:textColor="?colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/number_counter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:padding="-120dp"
            android:text="0"
            android:textColor="?colorPrimary"
            android:textSize="215sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/cairo_light"
            android:text="@string/shawt_string"
            android:textColor="?colorPrimary"
            android:textSize="30sp" />

        <Button
            android:id="@+id/start_counter_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/start_string"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:theme="@style/ButtonStyleTawaf" />


        <TextView
            android:id="@+id/douaa_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/cairo_light"
            android:text="بسم الله و الله أكبر"
            android:textAlignment="center"
            android:textColor="?colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>


</ScrollView>